[package]
name = "rusty-merge"
version = "0.1.0"
description = "A merge handler for your github pull requests"
authors = ["Nick <Anthony> Flueckiger <nick.anthony.flueckiger@hey.com>"]
edition = "2018"
repository = "https://github.com/liberatys/rusty-merge/"
homepage = "https://github.com/liberatys/rusty-merge/"
license = "MPL-2.0"
keywords = []

[dependencies]
