[package]
name = "rusty-merge"
version = "0.1.0"
description = "A merge handler for your github pull requests"
authors = ["Nick <Anthony> Flueckiger <nick.anthony.flueckiger@hey.com>"]
edition = "2018"
repository = "https://github.com/liberatys/rusty-merge/"
homepage = "https://github.com/liberatys/rusty-merge/"
license = "MPL-2.0"
keywords = []

[dependencies]
daemonize-me = "2.0"
clap = { version = "3.1.8", features = ["cargo"] }
clap_complete = "3.1.1"
notify-rust = "4"
env_logger = "0.9.0"
clokwerk = "0.3.5"
anyhow = "1.0"
lazy_static = "1.4.0"
octocrab = { path = "../../o/octocrab" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
whoami = "1.2"
nix = "0.23.1"
tokio = { version = "1.17.0", features = ["full"] }
directories-next = "2.0.0"
toml = "0.5.8"

[dev-dependencies]
wiremock = "0.5"
